--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@srm/rollup-treeshaking",
+  "name": "@truedrug/rollup-treeshaking",
   "version": "1.0.0",
   "description": "",
   "files": [
@@ -26,5 +26,8 @@
     "typescript": "^4.9.3"
   },
   "keywords": [],
-  "license": "ISC"
+  "license": "ISC",
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  }
 }
