--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "sideEffects": false,
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
-  "types": "lib/index.d.ts",
+  "types": "lib/esm/index.d.ts",
   "scripts": {
     "build": "rm -rf lib && rollup -c rollup.config.js"
   },
